Version 4.4.8 - UI/UX Hotfix -> A zoom feature has been added to dynamic map, as the redirecting image doesn't show the real content. -> Fixed reservations absolute pages overflowing relative div on small screen or zoomed devices. -> Fixed dots and arrows on map overflowing map on small screen or zoomed devices.

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,4 +8,13 @@
       -webkit-appearance: none;
       margin: 0;
     }
+    input[type="range"]::-webkit-slider-thumb {
+      -webkit-appearance: none;
+      appearance: none; 
+      height: 15px;
+      width: 15px;
+      border-radius: 50%;
+      border: 2px solid #2b2b2b;
+      box-shadow: -407px 0 0 400px #2b2b2b;
+    }
   }
